<resources>
    <string name="app_name">CLT Eats</string>
    <string name="action_settings">About</string>
    <!--DemoResource-->
    <string name="app_name_alt">CLT Eats</string>
    <!--MainActivity-->
    <string name="btn_search">Search</string>
    <string name="btn_favorites">Favorites</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_About">About</string>
    <string name="title_activity_search">Map</string>
    <string-array name="distance_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string-array name="cuisine_array">
        <item>Any</item>
        <item>American</item>
        <item>Barbecue</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Hamburger</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Seafood</item>
        <item>Steak</item>
        <item>Sushi</item>
        <item>Thai</item>
    </string-array>
    <string-array name="price_array">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
    <!--SearchActivity-->
    <string name="spinnername_distance">Distance</string>
    <string name="spinnername_category">Type of Food</string>
    <string name="spinnername_price">Price</string>
    <string name="btn2_search">Search</string>
    <string name="btn_Randomize">I\'m Feeling Lucky</string>
    <!--restaurant_result_object-->
    <string name="name">Restaurant Name</string>
    <string name="address">xxxx Street Name</string>
    <string name="distance_number">00</string>
    <string name="distance_footer"> miles away</string>
    <string name="Rating">5.0</string>
    <!--DemoResource-->
    <string name="label_btn_find">Find</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_settings">Settings</string>
    <!--AboutActivity-->
    <string name="about_Header">About</string>
    <string name="about_App">The new best app for restaurant discovery!</string>
    <string name="about_UserNotes">User Notes</string>
    <string name="about_Distance">- Distance is currently straight-line only</string>
    <string name="about_Pins">- To launch a navigation touch the pin corresponding to your restaurant choice, then touch one of the buttons that popup on the map.</string>
    <string name="about_PriceSort">- The search constraints should be used as a maximum filter for the given type ... setting price=$$ will remove anything listed as $$$ or $$$$ category.</string>
    <string name="about_Resources">Powered By</string>
    <string name="about_GoogleMapsAPI">Google Maps API</string>
    <string name="about_BuildTeam">Build Team</string>
    <string name="about_Team">Group 10</string>
    <!--PopupWindowResources-->
    <string name="pop_Details_Header">Details</string>
    <string name="pop_Price_Header">Price:</string>
    <string name="pop_Price_Var">xxx</string>
    <string name="pop_Reviews_Header">Reviews</string>
    <string name="pop_PhoneNumber_Header">Phone:</string>
    <string name="pop_PhoneNumber_var">###-###-####</string>
    <!--PopupWindowActions Resources-->
    <string name="pop_AddFavorite">Add to Favorites</string>
    <string name="pop_ViewDetails">View Details</string>
    <string name="pop_DeleteFavorite">Delete Favorite</string>
    <!--SettingsActivity-->
    <string name="set_Prefs_Header">Preferences</string>
    <string name="set_sortBy">Sort Lists by:</string>
    <string-array name="sortBy_array">
        <item>Distance</item>
        <item>Rating</item>
        <item>A-Z</item>
    </string-array>
    <string name="switch_RandomType">Randomize results by constraints:</string>
    <string name="switch_ResultsFilter">Filter results lacking constraints:</string>
    <string name="switch_PushNotifications">Enable Push Notifications:</string>
    <string name="btn_Save">Save</string>
    <string name="app_Build_Header">Application Build</string>
    <string name="app_BuildVersion">v0.7.6</string>
    <string name="app_BuildDate">05/02/2017</string>
</resources>
