<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uncc.ryan.clteatsdemo.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/headerAppName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="37dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/btn_search"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnFavorites"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_favorites"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_settings"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
