<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#034125"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#756733"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/restaurantObjLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#C1AF6C"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="123dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.97"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rllName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/name"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/rllAddress"
                            android:layout_width="202dp"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/address"
                            android:textColor="@android:color/background_light"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/rllDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/distance_number"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/rllDistanceType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:text="@string/distance_footer"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rllRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/Rating"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/rllStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@android:drawable/star_big_off"
                        android:scaleType="fitXY" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
