<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GooglePlacesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/googleMap"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="265dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/googleMap"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/spinnername_distance"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.97"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/spinnername_category"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="194dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/spinnername_price"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <Button
                android:id="@+id/btn2Search"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn2_search"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>